added dynamic content in index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,5 +8,8 @@
         <h1>
             Simple Web Application using Python Flask Framework
         </h1>
+        <h2> 
+            Response from host {{ hostname }} with IP address {{ IP }}
+        </h2>
     </body>
 </html>
